Remove reflection-based XPathFactory mocking